backend setup and landing page is done

--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bW92ZWQteWV0aS02Ni5jbGVyay5hY2NvdW50cy
 CLERK_SECRET_KEY=sk_test_Pm06Tm5GiCvaj1eOGR132b8zdst8GeNJdZ53KsPbGb
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=sign-up
+
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://postgres.gcfegjvwdoejnbfjylwz:Priya@himaja1@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# Direct connection to the database. Used for migrations
+DIRECT_URL="postgresql://postgres.gcfegjvwdoejnbfjylwz:Priya@himaja1@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+
+ARCJET_KEY=ajkey_01jsxrwd41f638hf37jzpa4cs6
