--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.0.0",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2"
   },
