--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.56.1",
     "react-spinners": "^0.17.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.3"
